<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/home"
        android:fontFamily="sans-serif-light"
        android:id="@+id/home"
        android:icon="@drawable/home_24"
        app:showAsAction="ifRoom"/>
    <item android:title="@string/training"
        android:fontFamily="sans-serif-light"
        android:id="@+id/training"
        android:icon="@drawable/sports_martial_arts_24"
        app:showAsAction="ifRoom"/>
    <item android:title="@string/my_health"
        android:fontFamily="sans-serif-light"
        android:id="@+id/my_health"
        android:icon="@drawable/medical_information_24"
        app:showAsAction="ifRoom"/>
    <item android:title="@string/profile"
        android:fontFamily="sans-serif-light"
        android:id="@+id/profile"
        android:icon="@drawable/account_box_24"
        app:showAsAction="ifRoom"/>
</menu>