<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/StartScreen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitleHeaderOnMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/TitleOnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/authorization"
            android:textColor="@color/primary"
            android:fontFamily="sans-serif-thin"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/UserNameOnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/primary"
            android:hint="@string/user_name"
            android:inputType="text"
            android:textColor="@color/primary"
            android:textColorHint="@color/secondary"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PasswordOnLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="sans-serif-light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/primary"
            android:textColorHint="@color/secondary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/BLogInOnMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="sans-serif-light"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/BSignUpOnMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="sans-serif-light"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>