<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitleHeaderOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/app_name"
            android:textColor="@color/primary"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/TitleUNOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/UserNameOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TitlePasswordOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/PasswordOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TitleGenderOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/GenderOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TitleBirthdayOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/date_of_birth"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/BirthdayOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/TitleEmailOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/EmailOnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/BGoBackOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="@color/primary"
            android:fontFamily="sans-serif-light"
            android:text="@string/go_back"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>