<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CLOnProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Profile">


    <LinearLayout
        android:id="@+id/LLHUNOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/TitleUNOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_name"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/UserNameOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/for_empty_fields"
            android:textColor="@color/primary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLHPasswordOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLHUNOnProfile">

        <TextView
            android:id="@+id/TitlePasswordOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/password"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/PasswordOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/for_empty_fields"
            android:textColor="@color/primary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLHGenderOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLHPasswordOnProfile">

        <TextView
            android:id="@+id/TitleGenderOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gender"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/GenderOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/for_empty_fields"
            android:textColor="@color/primary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLHBirthdayOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLHGenderOnProfile">

        <TextView
            android:id="@+id/TitleBirthdayOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/date_of_birth"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/BirthdayOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/for_empty_fields"
            android:textColor="@color/primary"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLHEmailOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLHBirthdayOnProfile">

        <TextView
            android:id="@+id/TitleEmailOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/primary"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/EmailOnProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/for_empty_fields"
            android:textColor="@color/primary"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/BLogInOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/authorization"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/BSignUpOnProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/registration"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/BLogInOnProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>